--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Dean Herman Ministries</a>
+            <a class="navbar-brand" href="#">
+                <img src="img/logos/DHMFullLogo-white.png" alt="Dean Herman Ministries" class="img-fluid" style="max-height: 40px;">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
@@ -52,32 +54,16 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="hero" class="d-flex align-items-center justify-content-center text-center">
+    <section id="hero" class="d-flex align-items-center justify-content-center text-center" style="border-bottom: 1px solid rgba(162, 133, 75, 0.5);">
         <!-- Hero content -->
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h1>Revitalize Your Faith Journey</h1>
+            <div class="row justify-content-center">
+                <div class="col-lg-8 mx-auto d-flex flex-column align-items-center">
+                    <img src="img/logos/DHMFullLogo-white.png" alt="Dean Herman Ministries Logo" class="img-fluid mb-5" style="max-width: 600px;">
                     <p class="lead mb-4">Join Dean Herman Ministries for upcoming events and workshop hosting</p>
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-md-6 mb-4">
-                    <div class="hero-card d-flex flex-column h-100">
-                        <h3>Upcoming Events</h3>
-                        <p>Experience powerful teachings and transformative worship at our upcoming events. Each gathering is an opportunity to deepen your relationship with God.</p>
-                        <div class="mt-auto">
-                            <a href="#events" class="btn btn-primary">View Schedule</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <div class="hero-card alt d-flex flex-column h-100">
-                        <h3>Workshop Hosting</h3>
-                        <p>Invite Dean Herman to host a workshop at your church or event. Our Bible studies and leadership trainings are designed to equip and empower.</p>
-                        <div class="mt-auto">
-                            <a href="#contact" class="btn btn-primary">Get in Touch</a>
-                        </div>
+                    <div class="mt-2">
+                        <a href="#events" class="btn btn-primary me-3">View Schedule</a>
+                        <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +98,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="testimonial-card h-100">
                         <div class="video-container">
-                            <img src="img/DSC07144-X5.jpg" alt="Church Testimony">
+                            <img src="img/images/DSC07144-X5.jpg" alt="Church Testimony">
                             <div class="video-overlay">
                                 <i class="fas fa-play-circle"></i>
                                 <span>Watch Testimony</span>
@@ -129,7 +115,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="testimonial-card h-100">
                         <div class="video-container">
-                            <img src="img/DSC07151-X5.jpg" alt="Leadership Conference">
+                            <img src="img/images/DSC07151-X5.jpg" alt="Leadership Conference">
                             <div class="video-overlay">
                                 <i class="fas fa-play-circle"></i>
                                 <span>Watch Testimony</span>
@@ -146,7 +132,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="testimonial-card h-100">
                         <div class="video-container">
-                            <img src="img/DSC07087-L.jpg" alt="Family Counseling">
+                            <img src="img/images/DSC07087-L.jpg" alt="Family Counseling">
                             <div class="video-overlay">
                                 <i class="fas fa-play-circle"></i>
                                 <span>Watch Testimony</span>
@@ -170,7 +156,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 mb-5 mb-lg-0 text-center">
-                    <img src="img/PastorPhoto.jpg" alt="Pastor Dean Herman" class="img-fluid rounded-circle pastor-image">
+                    <img src="img/images/PastorPhoto.jpg" alt="Pastor Dean Herman" class="img-fluid rounded-circle pastor-image">
                     <h3 class="mt-4 pastor-title">Dean Herman</h3>
                     <p>Founder & Lead Pastor</p>
                 </div>
@@ -194,7 +180,7 @@
                     <p class="lead">Join us at one of our upcoming events to experience powerful teaching and community.</p>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-5 justify-content-center">
                 <div class="col-md-4 mb-4">
                     <div class="event-card d-flex flex-column h-100">
                         <h3>Prayer & Worship Night</h3>
@@ -202,30 +188,6 @@
                         <p class="event-detail"><i class="fas fa-map-marker-alt"></i> Grace Community Church</p>
                         <p class="event-detail"><i class="fas fa-user"></i> Led by Dean Herman</p>
                         <p>An evening of powerful worship and intercessory prayer for our community and nation. Open to all.</p>
-                        <div class="mt-auto">
-                            <a href="#contact" class="btn btn-primary">Register</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="event-card d-flex flex-column h-100">
-                        <h3>Leadership Conference</h3>
-                        <p class="event-date">September 23-25, 2023</p>
-                        <p class="event-detail"><i class="fas fa-map-marker-alt"></i> Faith Center</p>
-                        <p class="event-detail"><i class="fas fa-users"></i> For Church Leaders</p>
-                        <p>A three-day intensive for church leaders focused on Biblical leadership principles and practical ministry skills.</p>
-                        <div class="mt-auto">
-                            <a href="#contact" class="btn btn-primary">Details</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="event-card d-flex flex-column h-100">
-                        <h3>Family Retreat</h3>
-                        <p class="event-date">October 14-16, 2023</p>
-                        <p class="event-detail"><i class="fas fa-map-marker-alt"></i> Mountain View Retreat Center</p>
-                        <p class="event-detail"><i class="fas fa-home"></i> For Families</p>
-                        <p>A weekend retreat for families to strengthen relationships through Biblical teaching and fun activities.</p>
                         <div class="mt-auto">
                             <a href="#contact" class="btn btn-primary">Register</a>
                         </div>
@@ -248,7 +210,7 @@
             <div class="row mt-5">
                 <div class="col-md-4 mb-4">
                     <div class="workshop-card h-100">
-                        <img src="img/49C_7676.jpg" alt="Bible Interpretation">
+                        <img src="img/images/49C_7676.jpg" alt="Bible Interpretation">
                         <div class="workshop-content">
                             <h4>Biblical Interpretation</h4>
                             <p>Learn principles for accurately interpreting Scripture in its proper context.</p>
@@ -258,7 +220,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="workshop-card h-100">
-                        <img src="img/49C_7903.jpg" alt="Prayer Workshop">
+                        <img src="img/images/49C_7903.jpg" alt="Prayer Workshop">
                         <div class="workshop-content">
                             <h4>Prayer Fundamentals</h4>
                             <p>Discover how to develop a rich prayer life based on Biblical patterns and principles.</p>
@@ -268,7 +230,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="workshop-card h-100">
-                        <img src="img/49C_9493.jpg" alt="Spiritual Disciplines">
+                        <img src="img/images/49C_9493.jpg" alt="Spiritual Disciplines">
                         <div class="workshop-content">
                             <h4>Spiritual Disciplines</h4>
                             <p>Learn practices that foster spiritual growth and a deeper walk with Christ.</p>
@@ -320,7 +282,7 @@
                 </div>
                 <div class="col-md-6 mb-4 d-flex align-items-center">
                     <div class="text-center text-md-left">
-                        <img src="img/logo.png" alt="Dean Herman Ministries Logo" class="logo">
+                        <img src="img/logos/DHMFullLogo-white.png" alt="Dean Herman Ministries Logo" class="logo">
                         <p class="mt-4">"Let us help you grow in your understanding of God's Word and apply its timeless principles to your life."</p>
                         <p class="contact-email mt-4"><i class="fas fa-envelope"></i> contact@deanhermanministries.com</p>
                     </div>
@@ -334,7 +296,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                    <img src="img/logo.png" alt="Dean Herman Ministries Logo" class="img-fluid footer-logo" style="max-height: 80px;">
+                    <img src="img/logos/DHMFullLogo-white.png" alt="Dean Herman Ministries Logo" class="img-fluid footer-logo" style="max-height: 80px;">
                 </div>
                 <div class="col-md-4 text-center mb-3 mb-md-0">
                     <p class="contact-email"><i class="fas fa-envelope me-2"></i>info@deanhermanministries.com</p>
