--- a/index.html
+++ b/index.html
@@ -152,19 +152,31 @@
 
     <!-- Pastor Section -->
     <section id="pastor" class="pastor-section">
-        <!-- Pastor content -->
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-4 mb-5 mb-lg-0 text-center">
-                    <img src="img/images/PastorPhoto.jpg" alt="Pastor Dean Herman" class="img-fluid rounded-circle pastor-image">
-                    <h3 class="mt-4 pastor-title">Dean Herman</h3>
-                    <p>Founder & Lead Pastor</p>
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center">
+                    <h2 class="section-title">Meet Pastor Dean</h2>
+                    <p class="lead">Dedicated to teaching God's Word with clarity and purpose.</p>
                 </div>
-                <div class="col-lg-8 pastor-bio">
-                    <p class="pastor-quote mb-4">"My mission is to help every believer understand the profound truths of Scripture and apply them in practical ways."</p>
-                    <p>Dean Herman has been in ministry for over 20 years, with a focus on Biblical teaching and leadership development. With a background in theology and counseling, he brings depth and practical wisdom to his workshops and speaking engagements.</p>
-                    <p>His unique approach combines Biblical exegesis with real-life application, making complex spiritual concepts accessible to believers at every stage of their faith journey.</p>
-                    <p>"For I am not ashamed of the gospel, because it is the power of God that brings salvation to everyone who believes." — <strong>Romans 1:16</strong></p>
+            </div>
+            <div class="row mt-5 justify-content-center">
+                <div class="col-lg-10">
+                    <div class="pastor-card d-flex flex-column h-100">
+                        <div class="row align-items-center">
+                            <div class="col-md-4 text-center mb-4 mb-md-0">
+                                <img src="img/images/PastorPhoto.jpg" alt="Pastor Dean Herman" class="pastor-image img-fluid rounded">
+                            </div>
+                            <div class="col-md-8">
+                                <h3 class="pastor-title">Dean Herman</h3>
+                                <p class="pastor-quote mb-4">"Let us help you grow in your understanding of God's Word and apply its timeless principles to your life."</p>
+                                <div class="pastor-bio">
+                                    <p>Pastor Dean Herman has dedicated his life to teaching and ministering God's Word. With years of experience in pastoral care and Biblical education, he brings depth and practical application to Scripture.</p>
+                                    <p>Through Dean Herman Ministries, he continues to reach out to communities, helping individuals develop a deeper understanding of their faith and apply Biblical principles to their daily lives.</p>
+                                </div>
+                                <a href="#contact" class="btn btn-primary mt-3">Connect With Us</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
