--- a/index.html
+++ b/index.html
@@ -91,58 +91,39 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="section-title">Testimonials</h2>
-                    <p class="lead">Hear from those whose lives have been impacted by our ministry.</p>
+                    <p class="lead">Hear from those who have been impacted by our ministry.</p>
                 </div>
             </div>
-            <div class="row mt-5">
-                <div class="col-md-4 mb-4">
-                    <div class="testimonial-card h-100">
+            <div class="row mt-5 justify-content-center">
+                <div class="col-md-6 mb-4">
+                    <div class="testimonial-card">
                         <div class="video-container">
-                            <img src="img/images/DSC07144-X5.jpg" alt="Church Testimony">
+                            <img src="img/testimonials/testimonial1.jpg" alt="Testimonial 1">
                             <div class="video-overlay">
                                 <i class="fas fa-play-circle"></i>
                                 <span>Watch Testimony</span>
                             </div>
                         </div>
                         <div class="testimonial-content">
-                            <h3>Life Changing</h3>
                             <p class="testimonial-date">March 15, 2023</p>
-                            <p class="testimonial-type">Church Workshop</p>
-                            <p>"The workshop on prayer transformed how I approach my daily devotions. I've experienced God's presence in new ways."</p>
+                            <p class="testimonial-type">Life Transformation Story</p>
+                            <p>A powerful testimony of how God's Word brought healing and restoration.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="testimonial-card h-100">
+                <div class="col-md-6 mb-4">
+                    <div class="testimonial-card">
                         <div class="video-container">
-                            <img src="img/images/DSC07151-X5.jpg" alt="Leadership Conference">
+                            <img src="img/testimonials/testimonial2.jpg" alt="Testimonial 2">
                             <div class="video-overlay">
                                 <i class="fas fa-play-circle"></i>
                                 <span>Watch Testimony</span>
                             </div>
                         </div>
                         <div class="testimonial-content">
-                            <h3>Leadership Growth</h3>
-                            <p class="testimonial-date">July 22, 2023</p>
-                            <p class="testimonial-type">Conference Speaker</p>
-                            <p>"Dean's teaching on servant leadership helped our entire team recalibrate how we approach ministry. Practical and inspiring."</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="testimonial-card h-100">
-                        <div class="video-container">
-                            <img src="img/images/DSC07087-L.jpg" alt="Family Counseling">
-                            <div class="video-overlay">
-                                <i class="fas fa-play-circle"></i>
-                                <span>Watch Testimony</span>
-                            </div>
-                        </div>
-                        <div class="testimonial-content">
-                            <h3>Family Restored</h3>
-                            <p class="testimonial-date">October 8, 2023</p>
-                            <p class="testimonial-type">Family Workshop</p>
-                            <p>"The principles we learned from Dean's family workshop helped us rebuild communication and trust in our marriage."</p>
+                            <p class="testimonial-date">April 5, 2023</p>
+                            <p class="testimonial-type">Ministry Impact</p>
+                            <p>Hear how our workshops have impacted this leader's church community.</p>
                         </div>
                     </div>
                 </div>
