--- a/index.html
+++ b/index.html
@@ -148,13 +148,11 @@
                                 <img src="img/images/PastorPhoto.jpg" alt="Pastor Dean Herman" class="pastor-image img-fluid rounded">
                             </div>
                             <div class="col-md-8">
-                                <h3 class="pastor-title">Dean Herman</h3>
                                 <p class="pastor-quote mb-4">"Let us help you grow in your understanding of God's Word and apply its timeless principles to your life."</p>
                                 <div class="pastor-bio">
                                     <p>Pastor Dean Herman has dedicated his life to teaching and ministering God's Word. With years of experience in pastoral care and Biblical education, he brings depth and practical application to Scripture.</p>
                                     <p>Through Dean Herman Ministries, he continues to reach out to communities, helping individuals develop a deeper understanding of their faith and apply Biblical principles to their daily lives.</p>
                                 </div>
-                                <a href="#contact" class="btn btn-primary mt-3">Connect With Us</a>
                             </div>
                         </div>
                     </div>
@@ -181,7 +179,7 @@
                         <p class="event-detail"><i class="fas fa-map-marker-alt"></i> Grace Community Church</p>
                         <p class="event-detail"><i class="fas fa-user"></i> Led by Dean Herman</p>
                         <p>An evening of powerful worship and intercessory prayer for our community and nation. Open to all.</p>
-                        <div class="mt-auto">
+                        <div class="mt-auto text-center">
                             <a href="#contact" class="btn btn-primary">Register</a>
                         </div>
                     </div>
@@ -228,6 +226,36 @@
                             <h4>Spiritual Disciplines</h4>
                             <p>Learn practices that foster spiritual growth and a deeper walk with Christ.</p>
                             <p>"Train yourself to be godly. For physical training is of some value, but godliness has value for all things." — <strong>1 Timothy 4:7-8</strong></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="workshop-card h-100">
+                        <img src="img/images/IMG_8064.webp" alt="Biblical Leadership">
+                        <div class="workshop-content">
+                            <h4>Biblical Leadership</h4>
+                            <p>Discover principles of servant leadership through the lens of Scripture.</p>
+                            <p>"Not so with you. Instead, whoever wants to become great among you must be your servant." — <strong>Matthew 20:26</strong></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="workshop-card h-100">
+                        <img src="img/images/DSC07144-X5.jpg" alt="Bible Study Methods">
+                        <div class="workshop-content">
+                            <h4>Bible Study Methods</h4>
+                            <p>Learn effective techniques for personal and group Bible study.</p>
+                            <p>"Study to show yourself approved unto God, a workman that needs not to be ashamed." — <strong>2 Timothy 2:15</strong></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="workshop-card h-100">
+                        <img src="img/images/DSC07151-X5.jpg" alt="Teaching Scripture">
+                        <div class="workshop-content">
+                            <h4>Teaching Scripture</h4>
+                            <p>Develop skills to effectively teach and communicate God's Word to others.</p>
+                            <p>"Let the word of Christ dwell in you richly, teaching and admonishing one another in all wisdom." — <strong>Colossians 3:16</strong></p>
                         </div>
                     </div>
                 </div>
