--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="workshop-card h-100">
-                        <img src="img/images/49C_7903.jpg" alt="Prayer Workshop">
+                        <img src="img/images/DSC07293-4K.jpg" alt="Prayer Workshop">
                         <div class="workshop-content">
                             <h4>Prayer Fundamentals</h4>
                             <p>Discover how to develop a rich prayer life based on Biblical patterns and principles.</p>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="workshop-card h-100">
-                        <img src="img/images/49C_9493.jpg" alt="Spiritual Disciplines">
+                        <img src="img/images/IMG_8067.jpg" alt="Spiritual Disciplines">
                         <div class="workshop-content">
                             <h4>Spiritual Disciplines</h4>
                             <p>Learn practices that foster spiritual growth and a deeper walk with Christ.</p>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="workshop-card h-100">
-                        <img src="img/images/IMG_8064.webp" alt="Biblical Leadership">
+                        <img src="img/images/DSC07087-L.jpg" alt="Biblical Leadership">
                         <div class="workshop-content">
                             <h4>Biblical Leadership</h4>
                             <p>Discover principles of servant leadership through the lens of Scripture.</p>
@@ -241,7 +241,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="workshop-card h-100">
-                        <img src="img/images/DSC07144-X5.jpg" alt="Bible Study Methods">
+                        <img src="img/images/DSC07296-4K.jpg" alt="Bible Study Methods">
                         <div class="workshop-content">
                             <h4>Bible Study Methods</h4>
                             <p>Learn effective techniques for personal and group Bible study.</p>
