--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 
     <!-- Hero Section -->
     <section id="hero" class="d-flex align-items-center justify-content-center text-center" style="border-bottom: 1px solid rgba(162, 133, 75, 0.5);">
-        <!-- Hero content -->
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8 mx-auto d-flex flex-column align-items-center">
-                    <img src="img/logos/DHMFullLogo-white.png" alt="Dean Herman Ministries Logo" class="img-fluid mb-5" style="max-width: 600px;">
+                <div class="col-lg-10 col-md-11 col-sm-12 mx-auto d-flex flex-column align-items-center">
+                    <div class="hero-logo-container">
+                        <img src="img/logos/DHMFullLogo-white.png" alt="Dean Herman Ministries Logo" class="img-fluid mb-5">
+                    </div>
                     <p class="lead mb-4">Join Dean Herman Ministries for upcoming events and workshop hosting</p>
                     <div class="mt-2">
                         <a href="#events" class="btn btn-primary me-3">View Schedule</a>
