--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <p class="lead mb-4">Join Dean Herman Ministries for upcoming events and workshop hosting</p>
                     <div class="mt-2">
-                        <a href="#events" class="btn btn-primary me-3">Host Workshop</a>
+                        <a href="#events" class="btn btn-primary me-3">Host a Workshop</a>
                         <a href="#contact" class="btn btn-primary">Get in Touch</a>
                     </div>
                 </div>
