--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- Announcement Banner -->
+    <div class="announcement-banner">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 text-center">
+                    <p class="mb-0">
+                        <i class="fas fa-calendar-alt me-2"></i>
+                        <strong>Upcoming Event:</strong> Prayer & Worship Night - August 15, 2023 | 7:00 PM at Grace Community Church
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
@@ -329,9 +343,26 @@
         </div>
     </footer>
 
+    <!-- Popup Ad -->
+    <div class="popup-ad-overlay" id="popupOverlay"></div>
+    <div class="popup-ad" id="popupAd">
+        <span class="popup-ad-close" id="closePopup">&times;</span>
+        <div class="popup-ad-content">
+            <img src="img/images/49C_7676.jpg" alt="Bible Study Workshop" class="popup-image">
+            <h4>Join Our Next Workshop!</h4>
+            <p>Limited spots available for our upcoming Bible Study Workshop. Register now to secure your place.</p>
+            <a href="#contact" class="btn btn-primary">Register Now</a>
+        </div>
+    </div>
+
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="js/scripts.js"></script>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html> 
